--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,5 +3,5 @@ primaryColor="#30B9EF"
 backgroundColor="#FFFFFF"
 secondaryBackgroundColor="#F0F2F6"
 textColor="#313131"
-font="sans serif"
+font="sans serif; Roboto"
 base="light"
