--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ numpy
 pandas
 scikit-learn
 streamlit-option-menu
+streamlit-plotly-events
 DateTime
 plotly
 TIME-python
@@ -9,3 +10,4 @@ streamlit_pandas_profiling
 ydata_profiling
 matplotlib
 pickle5
+math
